fix: fixed button mobile layout

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -93,4 +93,9 @@
     line-height: 15px;
     margin-top: 220px;
   }
+
+  .button_place_search-form {
+    width: 59px;
+    margin-top: 0;
+  }
 }
